<resources>
    <string name="app_name">玩安卓</string>

    <string name="title">标题</string>
    <string name="title2">标题：</string>
    <string name="testLogin">测试登录</string>

    <string name="fine_no_data">fine, no data.</string>
    <string name="click_me_to_retry">click me to retry!</string>
    <string name="take_photo">拍照</string>
    <string name="my_album">我的相册</string>
    <string name="cancel">取消</string>

    <string name="home">首页</string>
    <string name="search">搜索</string>
    <string name="konwledge">知识体系</string>
    <string name="wechat">公众号</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>

    <string name="collection">收藏</string>
    <string name="todo_tool">TODO工具</string>
    <string name="night_dark_mode">日间/夜间模式</string>
    <string name="set">设置</string>
    <string name="about_us">关于我们</string>
    <string name="exit">退出</string>
    <string name="action_share">分享</string>
    <string name="action_like">收藏</string>
    <string name="action_browser">在浏览器中打开</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="exit_tip">再按一次退出</string>
    <string name="web">网页</string>
    <string name="login">登录</string>
    <string name="no_account_to_register">没有账号?</string>
    <string name="register">注册</string>
    <string name="please_input_account">请输入用户名</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="my_collect">我的收藏</string>
    <string name="knowledge">知识分类</string>
    <string name="to_do">清单</string>

    <string name="notodo">待办</string>
    <string name="completed">已完成</string>
    <string name="switch_label">切换</string>
    <string name="delete">删除</string>
    <string name="mark_done">标为已完成</string>
    <string name="restore">复原</string>
    <string name="priority_1">重要</string>
    <string name="priority_0">一般</string>

    <string name="no_data">暂无数据</string>
    <string name="add_todo">新增</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="non_compulsory">非必填</string>
    <string name="details">详情：</string>
    <string name="compulsory">必填</string>
    <string name="date">日期：</string>
    <string name="hot_search">热门搜索</string>
    <string name="clear_all">清空</string>
    <string name="history_search">搜索历史</string>

    <string name="search_tint">发现更多干货</string>
    <string name="search_null_tint">快来搜点干货吧</string>
    <string name="search_result">搜索结果</string>


</resources>
