<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
              android:layout_width="wrap_content"
    android:layout_height="wrap_content"
android:layout_gravity="bottom">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/m10"
        android:layout_marginRight="@dimen/m10"
        android:background="@drawable/bg_whitef7_oval">




        <TextView
            android:id="@+id/tv_pw_modify_header_take"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/m20"
            android:textColor="@color/blue0076"
            android:layout_marginTop="@dimen/m18"
            android:gravity="center_horizontal"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/m0.5"
            android:layout_marginTop="@dimen/m17"
            android:background="@color/grayf5f5"
            />

        <TextView
            android:id="@+id/tv_pw_modify_header_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_album"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/m20"
            android:textColor="@color/blue0076"
            android:layout_marginTop="@dimen/m17"
            android:layout_marginBottom="@dimen/m17"
            android:gravity="center_horizontal"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_pw_modify_header_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m57"
        android:background="@drawable/bg_whitef7_oval"
        android:layout_marginTop="@dimen/m10"
        android:layout_marginLeft="@dimen/m10"
        android:layout_marginRight="@dimen/m10"
        android:text="@string/cancel"
        android:gravity="center"
        android:textSize="@dimen/m20"
        android:textColor="@color/blue0076"
        android:layout_marginBottom="@dimen/m10"/>

</LinearLayout>